# apache-flight-sql-router

./: Cargo.toml  README.md
src/: auth.rs  db_router.rs  flight_server.rs  interceptor.rs  lib.rs  main.rs  service.rs  sql_service.rs  types.rs  utils.rs
src/db_backends/: mod.rs  pg_backend.rs
