[package]
name = "apache-flight-sql-router"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "56.0.0"
arrow-flight = { version = "56.0.0", features = ["flight-sql"] }
tonic = "0.13.1"
serde_json = "1.0.142"
chrono = "0.4.41"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
http = "1.3.1"
once_cell = "1.21.3"
tracing = "0.1.41"
rand = "0.9.2"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
tokio = { version = "1.0", features = ["full", "test-util"] }
tokio-stream = "0.1.17"
uuid = { version = "1.18.0", features = ["v4"] }
async-trait = "0.1.88"
anyhow = "1.0.99"
arrow-array = "56.0.0"
arrow-schema = "56.0.0"
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
rust_decimal = "1.37.2"
testcontainers-modules = { version = "0.12.1", features = ["postgres", "blocking"] }
tokio-test = "0.4.4"
arrow-ipc = "56.0.0"

[dev-dependencies]
testcontainers = "^0.24.0"
testcontainers-modules = "0.12.1"
